use args from component + small UI fix on mobile

--- a/packages/components/src/components/post-stepper-item/post-stepper-item.scss
+++ b/packages/components/src/components/post-stepper-item/post-stepper-item.scss
@@ -192,8 +192,20 @@ $checkIconSize: calc(
     margin-inline: 0;
     padding: 0 !important;
 
+    &::before {
+      content: unset;
+    }
+
+    &::after {
+      inset-inline-start: 0 !important;
+    }
+
     &:last-child {
       flex: 0 0 32px;
+
+      &::after {
+        content: unset;
+      }
     }
     .stepper-item-content {
       margin-inline: 0 !important;
